--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,9 @@
         @apply rounded-md p-2 w-full m-2 cursor-pointer hover:bg-slate-500
         
     }
+    .darkText{
+        @apply text-[#000000d0]
+    }
    
         
 }
